2011-03-15  Lucas M. Schnorr <schnorr@gmail.com>
    * General/PajeType.[mh]: color dictionaries must not have keys with white
      spaces in the beginning. If values for states start with white spaces,
      we trimm them out before registering the colors.

2011-02-21  Lucas M. Schnorr <schnorr@gmail.com>
    * General/PajeType.[mh], General/HierarchyBrowser.m,
      General/PajeEntityInspector.m, PajeSimulator/PajeSimul+Events.m
      PajeSimulator/PajeSimul.m, ReductionFilter/BusyNode.m,
      ReductionFilter/ReduceEntityType.[mh]: types have an ident (its unique
      identification, usually the alias) and a description (usually its name).
      Old attributes (name, uniqueAlias) are removed to reflect this new layout.
      The -name method is removed, objects should call description on type to
      get its name.

2011-02-16  Lucas M. Schnorr <schnorr@gmail.com>
    * General/PajeType.[mh],
      PajeSimulator/PajeSimul+Events.m
      PajeSimulator/PajeSimul.m: bugfix, multiple types with same name
      are correctly managed by the simulator. Types were used as keys
      in the userEntities dictionary, but their hashes were the name,
      and not the unique identifier of the type (an optional alias).
      This commit addresses this issue by creating a new attribute to
      the PajeType that corresponds to the alias defined in the trace
      or the name (if alias not present). PajeTypes' hash is based
      on this new attribute.

2010-12-15  Lucas M. Schnorr <schnorr@gmail.com>
    * Paje/Paje.gorm/*: bugfix, changing the selected filter on popup updates
      the current filter of the "Filter" window

2010-11-24  Lucas M. Schnorr <schnorr@gmail.com>
    * FileReader/PajeFileReader.[hm]: method to obtain the porcentage
      of the trace file that has already been read.

2010-07-13  Lucas M. Schnorr <schnorr@gmail.com>
    * FileReader/PajeFileReader.[hm], General/Protocols.h: let the user